<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.auth.fragments.OtpVerificationFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:text="@string/otp_verification_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/otp_edit_box1"
                style="@style/edit_text_otp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp_edit_box2"
                style="@style/edit_text_otp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp_edit_box3"
                style="@style/edit_text_otp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp_edit_box4"
                style="@style/edit_text_otp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp_edit_box5"
                style="@style/edit_text_otp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/otp_edit_box6"
                style="@style/edit_text_otp"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/btnOtpVerify"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_resend_code" />


    <TextView
        android:id="@+id/tv_resend_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/resend_code"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textSize="29sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOtpVerify" />


</androidx.constraintlayout.widget.ConstraintLayout>